feat: now we can void ledger.

--- a/app/web/templates/ledger.html
+++ b/app/web/templates/ledger.html
@@ -1,6 +1,12 @@
 {{ define "ledger.html" }}
 <td class="px-4 py-2 border-t border-bg-highlight text-text-secondary">{{ .Date.Format "01-02" }}</td>
 <td class="px-4 py-2 border-t border-bg-highlight sm:table-cell text-text-secondary">{{ .Type }}</td>
-<td class="px-4 py-2 border-t border-bg-highlight md:table-cell text-text-secondary">{{ .Amount }}</td>
-<td class="px-4 py-2 border-t border-bg-highlight text-text-secondary">{{ shorten .Note }}</td>
+<td class="px-4 py-2 border-t border-bg-highlight md:table-cell text-text-secondary">
+    <span {{ if .IsVoided }} class="line-through" {{ end}}>{{ .Amount }}</span>
+</td>
+<td class="px-4 py-2 border-t border-bg-highlight text-text-secondary">
+    {{ if .IsVoided }}
+    <span class="text-error">[Voided]</span>
+    {{ else }} {{ shorten .Note }} {{ end }}
+</td>
 {{ end }}
